testsuite/bsc.typechecker/primtcons/ExpSizeOf_ValueOf_NoCtx.bs
package ExpSizeOf_ValueOf_NoCtx where

data Thing = Thing (UInt 42) deriving (Bits)

foo :: a -> Integer
foo _ = valueOf (SizeOf a)

{-# synthesize main #-}
main :: Module Empty
main = module
  rules
    "asdf": when True ==> $display (foo $ Thing _)
